--- a/po/tr.po
+++ b/po/tr.po
@@ -4933,7 +4933,7 @@ msgstr "Aşağıdaki veritabanına yetkileri ekle"
 
 #: server_privileges.php:1943
 msgid "Wildcards % and _ should be escaped with a \\ to use them literally"
-msgstr "_ ve % jokerleri harfi harfine kullanılmak için \\ ile doldurun."
+msgstr "_ ve % jokerleri harfi harfine kullanılmak için \\ ile doldurun"
 
 #: server_privileges.php:1946
 msgid "Add privileges on the following table"
