--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-15 12:24+0200\n"
+"PO-Revision-Date: 2010-06-15 12:26+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -6288,10 +6288,11 @@ msgstr ""
 "Bu [a@?page=form&amp;formset=features#tab_Security]seçenek[/a] "
 "etkisizleştirilmedikçe saldırganların herhangi bir MySQL sunucusuna "
 "bruteforce yöntemiyle oturum açmasına izin verecektir. Eğer bunun gerekli "
-"olduğunu düşünüyorsanız, [a@?page=form&amp;formset=features#tab_Security]"
-"güvenilir proksi listesi[/a] kullanın. Ancak, IP-tabanlı koruma eğer IP'niz, "
-"sizinde dahil olduğunuz binlerce kullanıcıya sahip ve bağlı olduğunuz bir "
-"ISS'e aitse güvenilir olmayabilir ."
+"olduğunu düşünüyorsanız, "
+"[a@?page=form&amp;formset=features#tab_Security]güvenilir proksi listesi[/a] "
+"kullanın. Ancak, IP-tabanlı koruma eğer IP'niz, sizinde dahil olduğunuz "
+"binlerce kullanıcıya sahip ve bağlı olduğunuz bir ISS'e aitse güvenilir "
+"olmayabilir."
 
 #: setup/lib/messages.inc.php:19
 msgid "Allow login to any MySQL server"
