Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -7405,10 +7405,11 @@ msgid ""
 msgstr ""
 "Eğer bunun gerekli olduğunu düşünüyorsanız, ilave koruma ayarları kullanın- "
 "[a@?page=servers&amp;mode=edit&amp;id=%1$d#tab_Server_config]anamakine "
-"kimlik denetimi[/a] ayarları ve [a@?page=form&amp;"
-"formset=features#tab_Security]güvenilir proksi listesi[/a]. Ancak, IP-"
-"tabanlı koruma eğer IP'niz, sizinde dahil olduğunuz binlerce kullanıcıya "
-"sahip ve bağlı olduğunuz bir ISS'e aitse güvenilir olmayabilir ."
+"kimlik denetimi[/a] ayarları ve "
+"[a@?page=form&amp;formset=features#tab_Security]güvenilir proksi "
+"listesi[/a]. Ancak, IP-tabanlı koruma eğer IP'niz, sizinde dahil olduğunuz "
+"binlerce kullanıcıya sahip ve bağlı olduğunuz bir ISS'e aitse güvenilir "
+"olmayabilir."
 
 #: setup/lib/messages.inc.php:273
 msgid "What PHP extension to use; you should use mysqli if supported"
