--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-15 12:27+0200\n"
+"PO-Revision-Date: 2010-06-15 12:58+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2188,9 +2188,9 @@ msgid ""
 "to the PHP timeout limit. This might be good way to import large files, "
 "however it can break transactions."
 msgstr ""
-"Küçük programcığın zaman sınırına yaklaşıldığını algılaması durumunda içeri "
-"aktarımı kesmeye izin ver. Bu büyük dosyaların içeri aktarımı için iyi bir "
-"yol olabilir, ancak hareketleri kesebilir."
+"Küçük programcığın PHP zaman aşımı sınırına yaklaşıldığını algılaması "
+"durumunda içeri aktarımı kesmeye izin ver. Bu büyük dosyaların içeri "
+"aktarımı için iyi bir yol olabilir, ancak hareketleri kesebilir."
 
 #: libraries/display_import.lib.php:239 setup/lib/messages.inc.php:161
 #| msgid "Number of records (queries) to skip from start"
