Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-15 12:58+0200\n"
+"PO-Revision-Date: 2010-06-15 12:59+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2980,7 +2980,7 @@ msgstr "TABLO MIME TÜRLERİ"
 
 #: libraries/export/sql.php:739
 msgid "RELATIONS FOR TABLE"
-msgstr "TABLO İLİŞKİLERİ"
+msgstr "TABLO BAĞLANTILARI"
 
 #: libraries/export/sql.php:796 libraries/tbl_triggers.lib.php:19
 msgid "Triggers"
