Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-15 13:01+0200\n"
+"PO-Revision-Date: 2010-06-15 13:05+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -5104,8 +5104,8 @@ msgid ""
 "Now, add the following lines at the end of [mysqld] section in your my.cnf "
 "and please restart the MySQL server afterwards."
 msgstr ""
-"Şimdi, aşağıdaki satırları my.cnf dosyamın sonuna ekle ve ondan sonra lütfen "
-"MySQL sunucusunu yeniden başlatın."
+"Şimdi, aşağıdaki satırları my.cnf dosyanız içindeki [mysqld] bölümünün "
+"sonuna ekleyin ve ondan sonra lütfen MySQL sunucusunu yeniden başlatın."
 
 #: server_replication.php:230
 msgid ""
