--- a/po/tr.po
+++ b/po/tr.po
@@ -8108,7 +8108,7 @@ msgid ""
 "(\"PRIMARY\" <b>must</b> be the name of and <b>only of</b> a primary key!)"
 msgstr ""
 "(\"PRIMARY\" <b>sadece ve sadece</b> bir birincil anahtarın ismi "
-"<b>olmalıdır!</b>"
+"<b>olmalıdır!</b>)"
 
 #: tbl_indexes.php:251
 #, php-format
