Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-15 13:26+0200\n"
+"PO-Revision-Date: 2010-06-15 13:27+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -4365,7 +4365,7 @@ msgstr "İlişki oluştur"
 
 #: pmd_general.php:80
 msgid "Reload"
-msgstr "Yeniden Yükle"
+msgstr "Yeniden yükle"
 
 #: pmd_general.php:83
 msgid "Help"
