--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-15 13:28+0200\n"
+"PO-Revision-Date: 2010-06-15 13:29+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -5775,7 +5775,7 @@ msgstr ""
 #: server_status.php:136
 msgid ""
 "The number of queries that have taken more than long_query_time seconds."
-msgstr "long_query_time saniyeden daha uzun zaman almış sorgu sayısıdır."
+msgstr "Long_query_time saniyeden daha uzun zaman almış sorgu sayısıdır."
 
 #: server_status.php:137
 msgid ""
