--- a/po/id.po
+++ b/po/id.po
@@ -4,13 +4,13 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-04-17 21:14+0200\n"
-"Last-Translator: Azhari Harahap <azhari.harahap@yahoo.com>\n"
+"PO-Revision-Date: 2010-06-16 01:29+0200\n"
+"Last-Translator:  <jack.hakim@yahoo.com>\n"
 "Language-Team: indonesian <id@li.org>\n"
+"Language: id\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: id\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Pootle 2.0.1\n"
 
@@ -111,10 +111,9 @@ msgstr "Komentar tabel"
 #: tbl_indexes.php:189 tbl_printview.php:142 tbl_relation.php:402
 #: tbl_select.php:135 tbl_structure.php:177 tbl_tracking.php:273
 #: tbl_tracking.php:324
-#, fuzzy
 #| msgid "Column names"
 msgid "Column"
-msgstr "Nama kolom"
+msgstr "Kolom"
 
 #: db_datadict.php:175 db_printview.php:106 libraries/Index.class.php:443
 #: libraries/db_events.inc.php:31 libraries/db_routines.inc.php:42
@@ -8212,285 +8211,3 @@ msgstr "Nama VIEW"
 #, fuzzy
 msgid "Rename view to"
 msgstr "Ubah nama tabel menjadi "
-
-#, fuzzy
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "Menambahkan field baru"
-
-#~ msgid "Field"
-#~ msgstr "Field"
-
-#~ msgid "Records"
-#~ msgstr "Catatan"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "Fields diputus oleh"
-
-#~ msgid "Fields"
-#~ msgstr "Field"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "Field %s telah dihapus"
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr "Lihat image/jpeg: inline"
-
-#, fuzzy
-#~| msgid "\"zipped\""
-#~ msgid "zipped"
-#~ msgstr "Dikompress dengan Zip"
-
-#, fuzzy
-#~| msgid "\"gzipped\""
-#~ msgid "gzipped"
-#~ msgstr "Dikompress dengan GZip"
-
-#, fuzzy
-#~| msgid "\"bzipped\""
-#~ msgid "bzipped"
-#~ msgstr "\"Dikompress dengan BZip\""
-
-#, fuzzy
-#~| msgid "Add custom comment into header (\\n splits lines)"
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr "Menambahkan komentar individual pada Header (\\n membelahkan garis)"
-
-#~ msgid "and"
-#~ msgstr "dan"
-
-#~ msgctxt "$strBLOBRepositoryDisabled"
-#~ msgid "Disabled"
-#~ msgstr "Nonaktifkan"
-
-#~ msgctxt "$strBLOBRepositoryEnabled"
-#~ msgid "Enabled"
-#~ msgstr "Aktifkan"
-
-#~ msgctxt "$strBLOBRepositoryRepair"
-#~ msgid "Repair"
-#~ msgstr "Perbaiki"
-
-#~ msgid "Calendar"
-#~ msgstr "Kalender"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "MySQL&nbsp;4.0 compatible"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr "Tidak dapat memuat konfigurasi default dari: \"%1$s\""
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "Ciptakan indeks pada kolom &nbsp;%s&nbsp;"
-
-#~ msgctxt "$strCreateTableShort"
-#~ msgid "Create table"
-#~ msgstr "Buat tabel"
-
-#~ msgctxt "$strCreateUserDatabaseNone"
-#~ msgid "None"
-#~ msgstr "Tak satupun"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "Tutup tabel (\"FLUSH\")"
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "Deskripsi"
-
-#, fuzzy
-#~ msgctxt "$strNoneDefault"
-#~ msgid "None"
-#~ msgstr "tanpa"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr "Skema dari database \"%s\"  - Halaman %s"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr "Tabel \"%s\" tidak ditemukan!"
-
-#~ msgid "running on %s"
-#~ msgstr "dijalankan pada %s"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr ""
-#~ "Faktor skala yang dipilih terlalu kecil untuk dimuat dalam skema satu "
-#~ "halaman"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt "None action"
-#~ msgid "None"
-#~ msgstr "tanpa"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt ""
-#~ msgid "None"
-#~ msgstr "tanpa"
-
-#, fuzzy
-#~| msgid "Grant all privileges on wildcard name (username\\_%)"
-#~ msgid "Grant all privileges on wildcard name (username_%)"
-#~ msgstr "Berikan semua hak untuk nama wildcard (pengguna\\_%)"
-
-#, fuzzy
-#~| msgid "The \"%s\" table doesn't exist!"
-#~ msgid "The %s table doesn"
-#~ msgstr "Tabel \"%s\" tidak ditemukan!"
-
-#, fuzzy
-#~| msgid "Could not load default configuration from: \"%1$s\""
-#~ msgid "Could not load default configuration from: %1"
-#~ msgstr "Tidak dapat memuat konfigurasi default dari: \"%1$s\""
-
-#, fuzzy
-#~| msgid "Error renaming table %1$s to %2$s"
-#~ msgid "Error renaming table %1 to %2"
-#~ msgstr "Kesalahan mengganti nama table %1$s ke %2$s"
-
-#, fuzzy
-#~| msgid ""
-#~| "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~| "extension. Please check your PHP configuration."
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1@Documentation][em]%1[/em][/a] extension. "
-#~ "Please check your PHP configuration."
-#~ msgstr ""
-#~ "gagal loading ekstensi %s,<br />mohon periksa kembali konfigurasi PHP."
-
-#, fuzzy
-#~ msgid "(or the local MySQL server"
-#~ msgstr "Gagal login ke MySQL server"
-
-#, fuzzy
-#~| msgid ""
-#~| "There is a chance that you may have found a bug in the SQL parser. "
-#~| "Please examine your query closely, and check that the quotes are correct "
-#~| "and not mis-matched. Other possible failure causes may be that you are "
-#~| "uploading a file with binary outside of a quoted text area. You can also "
-#~| "try your query on the MySQL command line interface. The MySQL server "
-#~| "error output below, if there is any, may also help you in diagnosing the "
-#~| "problem. If you still have problems or if the parser fails where the "
-#~| "command line interface succeeds, please reduce your SQL query input to "
-#~| "the single query that causes problems, and submit a bug report with the "
-#~| "data chunk in the CUT section below:"
-#~ msgid ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "be . "
-#~ msgstr ""
-#~ "Mungkin Anda telah temukan sebuah Bug dalam parser SQL. Mohon periksa "
-#~ "ulang pencarian SQL dengan teliti dan perhatikan apakah seluruh tanda "
-#~ "kutip benar dan seimbang. Penyebab kegagalan bisa terjadi bila Anda meng-"
-#~ "upload sebuah file binari diluar teks kutipan. Silakan menjalankan ulang "
-#~ "pencarian tersebut dengan menggunakan command line interface. Hasil dari "
-#~ "MySQL server error, jika tertampil, akan menolong Anda untuk mengetahui "
-#~ "penyebab dari masalah ini. Bila masalah ini tetap muncul atau Parser dari "
-#~ "kami masih juga gagal meskipun pencarian melalui command line interface "
-#~ "berhasil mohon kurangi input pada SQL query sampai pencarian yang "
-#~ "menyebabkan masalah ini ditemukan. Mohon kirimkan sebuah Bug Report "
-#~ "dengan cara menyisipkan data di bagian bawah ini kepada kami:"
-
-#~ msgctxt "$strStrucCSV"
-#~ msgid "CSV"
-#~ msgstr "Data CSV"
-
-#~ msgid "Copy"
-#~ msgstr "Salin"
-
-#~ msgid "Delete the users and reload the privileges afterwards."
-#~ msgstr "Hapus pengguna, lantas Reload hak-hak (Privileges)."
-
-#~ msgid ""
-#~ "This is the cleanest way, but reloading the privileges may take a while."
-#~ msgstr "Ini cara yang terbaik tetapi akan memakan waktu cukup lama."
-
-#~ msgid "has been altered."
-#~ msgstr "telah diubah."
-
-#~ msgid "Microsoft Excel 2000"
-#~ msgstr "Microsoft Excel 2000"
-
-#~ msgid ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-#~ msgstr ""
-#~ "Pengguna yang &quot;dihapus&quot; tetap berhak untuk mengakses Server "
-#~ "seperti biasa sampai Hak Istimewa (Privileges) di-reload."
-
-#~ msgid "Just delete the users from the privilege tables."
-#~ msgstr "Hapus pengguna dari dari tabel daftar pengguna."
-
-#~ msgid ""
-#~ "Allows running stored procedures; has no effect in this MySQL version."
-#~ msgstr ""
-#~ "Mengizinkan untuk berjalan dengan prosedur yang tersimpan; tidak ada efek "
-#~ "dalam versi MySQL ini."
-
-#~ msgid "Process list"
-#~ msgstr "Daftar proses"
-
-#, fuzzy
-#~ msgid "Reload privileges"
-#~ msgstr "Hak Istimewa (Privileges) Global"
-
-#~ msgid ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-#~ msgstr ""
-#~ "Pengguna yang bersangkutan tetap memiliki hak untuk USAGE sampai seluruh "
-#~ "Hak Istimewa (Privileges) di-reload kembali."
-
-#~ msgid "Native MS Excel format"
-#~ msgstr "Data asli MS Excel"
-
-#~ msgid "Tracking Mechanism"
-#~ msgstr "Mekanisme pelacakan"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT * query"
-#~ msgid "Select all"
-#~ msgstr "Pilih semua"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT ... query"
-#~ msgid "Select"
-#~ msgstr "Pilih semua"
-
-#, fuzzy
-#~| msgid "Insert"
-#~ msgctxt "Create INSERT query"
-#~ msgid "Insert"
-#~ msgstr "Sisipkan"
-
-#, fuzzy
-#~| msgid "Updated"
-#~ msgctxt "Create UPDATE query"
-#~ msgid "Update"
-#~ msgstr "Diperbarui"
-
-#, fuzzy
-#~| msgid "Delete"
-#~ msgctxt "Create DELETE query"
-#~ msgid "Delete"
-#~ msgstr "Hapus"
-
-#~ msgid "utf-8"
-#~ msgstr "utf-8"
-
-#~ msgid "Jan0"
-#~ msgstr "Januari0"
-
-#~ msgid "Jan1"
-#~ msgstr "Januari1"
-
-#~ msgid "Jan2"
-#~ msgstr "Januari2"
