--- a/po/id.po
+++ b/po/id.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-16 01:33+0200\n"
+"PO-Revision-Date: 2010-06-16 01:35+0200\n"
 "Last-Translator:  <jack.hakim@yahoo.com>\n"
 "Language-Team: indonesian <id@li.org>\n"
 "Language: id\n"
@@ -305,11 +305,10 @@ msgid "Repair"
 msgstr "Perbaiki"
 
 #: db_operations.php:574
-#, fuzzy
 #| msgid "Disabled"
 msgctxt "BLOB repository"
 msgid "Disabled"
-msgstr "Tidak aktif"
+msgstr "Tidak diaktifkan"
 
 #: db_operations.php:578
 msgid "Enable"
