--- a/po/id.po
+++ b/po/id.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-16 01:38+0200\n"
+"PO-Revision-Date: 2010-06-16 01:39+0200\n"
 "Last-Translator:  <jack.hakim@yahoo.com>\n"
 "Language-Team: indonesian <id@li.org>\n"
 "Language: id\n"
@@ -454,10 +454,9 @@ msgid "Add/Delete criteria rows"
 msgstr "Tambahkan/Hapus kriteria baris"
 
 #: db_qbe.php:596
-#, fuzzy
 #| msgid "Add/Delete Field Columns"
 msgid "Add/Delete columns"
-msgstr "Menambahkan/Hapus kolom"
+msgstr "Tambahkan/Hapus kolom"
 
 #: db_qbe.php:609 db_qbe.php:634
 msgid "Update Query"
