--- a/po/id.po
+++ b/po/id.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-16 01:39+0200\n"
+"PO-Revision-Date: 2010-06-16 01:40+0200\n"
 "Last-Translator:  <jack.hakim@yahoo.com>\n"
 "Language-Team: indonesian <id@li.org>\n"
 "Language: id\n"
@@ -550,10 +550,9 @@ msgid "Inside table(s):"
 msgstr "Cari dalam tabel:"
 
 #: db_search.php:355
-#, fuzzy
 #| msgid "Inside table(s):"
 msgid "Inside column:"
-msgstr "Cari dalam tabel:"
+msgstr "Di dalam kolom:"
 
 #: db_structure.php:81 db_structure.php:82 db_structure.php:94
 #: db_structure.php:95 db_structure.php:107 db_structure.php:108
