--- a/po/id.po
+++ b/po/id.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-16 01:41+0200\n"
+"PO-Revision-Date: 2010-06-16 01:45+0200\n"
 "Last-Translator:  <jack.hakim@yahoo.com>\n"
 "Language-Team: indonesian <id@li.org>\n"
 "Language: id\n"
@@ -848,7 +848,7 @@ msgstr "Penyimpanan telah dihapus."
 
 #: import.php:401
 msgid "Showing bookmark"
-msgstr ""
+msgstr "Tampilkan bookmark"
 
 #: import.php:403 sql.php:626
 #, php-format
