--- a/po/ko.po
+++ b/po/ko.po
@@ -214,9 +214,9 @@ msgid "The database name is empty!"
 msgstr "데이터베이스명이 없습니다!"
 
 #: db_operations.php:236
-#, fuzzy, php-format
+#, php-format
 msgid "Database %s has been renamed to %s"
-msgstr "테이블 %s을(를) %s(으)로 변경하였습니다."
+msgstr "데이터베이스 %s의 이름을(를) %s(으)로 변경하였습니다."
 
 #: db_operations.php:240
 #, fuzzy, php-format
