--- a/po/ko.po
+++ b/po/ko.po
@@ -219,9 +219,9 @@ msgid "Database %s has been renamed to %s"
 msgstr "데이터베이스 %s의 이름을(를) %s(으)로 변경하였습니다."
 
 #: db_operations.php:240
-#, fuzzy, php-format
+#, php-format
 msgid "Database %s has been copied to %s"
-msgstr "%s 테이블이 %s 으로 복사되었습니다."
+msgstr "데이터베이스 %s을(를)  %s 로 복사하였습니다."
 
 #: db_operations.php:412
 #, fuzzy
