--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-16 17:18+0200\n"
+"PO-Revision-Date: 2010-06-16 17:19+0200\n"
 "Last-Translator:  <cihar@nvyu.net>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -2369,9 +2369,8 @@ msgid "Link not found"
 msgstr ""
 
 #: libraries/engines/bdb.lib.php:21 main.php:228
-#, fuzzy
 msgid "Version information"
-msgstr "로그인 정보"
+msgstr "버전 정보"
 
 #: libraries/engines/innodb.lib.php:30
 msgid "Data home directory"
