--- a/po/ko.po
+++ b/po/ko.po
@@ -851,7 +851,7 @@ msgstr ""
 
 #: import.php:372 libraries/display_import.lib.php:24
 msgid "Could not load import plugins, please check your installation!"
-msgstr ""
+msgstr "가져오기 플러그인을 로드할 수 없습니다. 올바로 설치되었는지 확인해주세요!"
 
 #: import.php:397
 msgid "The bookmark has been deleted."
