--- a/po/ko.po
+++ b/po/ko.po
@@ -1049,10 +1049,9 @@ msgid "March"
 msgstr "3월"
 
 #: js/messages.php:85
-#, fuzzy
 #| msgid "Apr"
 msgid "April"
-msgstr "잎새달"
+msgstr "4월"
 
 #: js/messages.php:86
 msgid "May"
