--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-16 17:42+0200\n"
+"PO-Revision-Date: 2010-06-16 17:43+0200\n"
 "Last-Translator:  <cihar@nvyu.net>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -1074,7 +1074,7 @@ msgstr "8월"
 
 #: js/messages.php:90
 msgid "September"
-msgstr ""
+msgstr "9월"
 
 #: js/messages.php:91
 #, fuzzy
