Translation update done using Pootle.

--- a/po/ko.po
+++ b/po/ko.po
@@ -1102,7 +1102,7 @@ msgstr "시샘달"
 #. l10n: Short month name
 #: js/messages.php:101 libraries/common.lib.php:1561
 msgid "Mar"
-msgstr "물오름달"
+msgstr "3월"
 
 #. l10n: Short month name
 #: js/messages.php:103 libraries/common.lib.php:1563
