--- a/po/ko.po
+++ b/po/ko.po
@@ -1129,7 +1129,7 @@ msgstr "7월"
 #. l10n: Short month name
 #: js/messages.php:111 libraries/common.lib.php:1571
 msgid "Aug"
-msgstr "타오름달"
+msgstr "8월"
 
 #. l10n: Short month name
 #: js/messages.php:113 libraries/common.lib.php:1573
