--- a/po/ko.po
+++ b/po/ko.po
@@ -1162,10 +1162,9 @@ msgid "Monday"
 msgstr "월요일"
 
 #: js/messages.php:124
-#, fuzzy
 #| msgid "Tue"
 msgid "Tuesday"
-msgstr "화"
+msgstr "화요일"
 
 #: js/messages.php:125
 msgid "Wednesday"
