Translation update done using Pootle.

--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-16 17:46+0200\n"
+"PO-Revision-Date: 2010-06-16 17:47+0200\n"
 "Last-Translator:  <cihar@nvyu.net>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -1286,7 +1286,7 @@ msgstr "글꼴 크기"
 #: libraries/File.class.php:344 libraries/File.class.php:432
 #: libraries/File.class.php:569 libraries/File.class.php:708
 msgid "Unknown error in file upload."
-msgstr ""
+msgstr "파일 업로드 중에 알 수 없는 오류가 발생했습니다."
 
 #: libraries/File.class.php:414
 msgid "The uploaded file exceeds the upload_max_filesize directive in php.ini."
