--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-16 17:48+0200\n"
+"PO-Revision-Date: 2010-06-16 17:49+0200\n"
 "Last-Translator:  <cihar@nvyu.net>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -1319,6 +1319,8 @@ msgid ""
 "Error moving the uploaded file, see [a@./Documentation."
 "html#faq1_11@Documentation]FAQ 1.11[/a]"
 msgstr ""
+"업로드된 파일을 이동시킬 수 없었습니다. [a@./Documentation.html#faq1_11@Documentation]FAQ "
+"1.11[/a] 참조."
 
 #: libraries/Index.class.php:428 tbl_relation.php:529
 msgid "No index defined!"
