--- a/po/ko.po
+++ b/po/ko.po
@@ -1481,7 +1481,7 @@ msgstr ""
 
 #: libraries/auth/config.auth.lib.php:77
 msgid "Cannot connect: invalid settings."
-msgstr ""
+msgstr "연결할 수 없습니다: 잘못된 설정."
 
 #: libraries/auth/config.auth.lib.php:92
 #: libraries/auth/cookie.auth.lib.php:219 libraries/auth/http.auth.lib.php:65
