Translation update done using Pootle.

--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-16 17:55+0200\n"
+"PO-Revision-Date: 2010-06-16 17:56+0200\n"
 "Last-Translator:  <cihar@nvyu.net>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -1611,6 +1611,8 @@ msgid ""
 "Couldn't use the iconv, libiconv, or recode_string functions, although the "
 "necessary extensions appear to be loaded. Check your PHP configuration."
 msgstr ""
+"필요한 확장기능이 로드된 것 같지만 iconv, libiconv, 혹은 recode_string 함수를 사용할 수 없습니다. PHP "
+"설정을 확인해주십시오."
 
 #: libraries/common.inc.php:583
 msgid ""
